test/files/neg/val_infer.scala
class Test {
  trait Base { def foo: Int }
  trait Sub extends Base { def foo = "" }
}