test/files/neg/val_infer.check
val_infer.scala:3: error: type mismatch;
 found   : String("")
 required: Int
  trait Sub extends Base { def foo = "" }
                                     ^
one error found
